[metadata]
name = Panda3D
version = 1.11.0
url = https://www.panda3d.org/
description = Panda3D is a framework for 3D rendering and game development for Python and C++ programs.
license = Modified BSD License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment
    Topic :: Multimedia
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
author = Panda3D Team
author_email = etc-panda3d@lists.andrew.cmu.edu
project_urls =
    Source=https://github.com/panda3d/panda3d
    Tracker=https://github.com/panda3d/panda3d/issues
    Documentation=https://www.panda3d.org/manual/
    Funding=https://opencollective.com/panda3d

[tool:pytest]
testpaths = tests
